// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell-filling functions - boxes fillBoxes should match snapshot after one pass 1`] = `
"-------------------------------------------------------
|  9  |  1  |  6  ❚  4  |     |     ❚     |  3  |  7  |
-------------------------------------------------------
|  2  |     |     ❚     |     |     ❚  6  |     |     |
-------------------------------------------------------
|     |  8  |  7  ❚     |  3  |  6  ❚  1  |     |     |
=======================================================
|     |  9  |  5  ❚     |     |     ❚     |     |     |
-------------------------------------------------------
|     |  4  |  1  ❚  9  |  8  |  5  ❚  3  |  6  |     |
-------------------------------------------------------
|     |     |     ❚     |     |     ❚  4  |  9  |  5  |
=======================================================
|     |     |  3  ❚  1  |  9  |     ❚  8  |  2  |     |
-------------------------------------------------------
|  1  |     |  9  ❚     |     |     ❚     |     |  3  |
-------------------------------------------------------
|  4  |  7  |     ❚     |     |  3  ❚  9  |  1  |  6  |
-------------------------------------------------------"
`;

exports[`Cell-filling functions - rows and columns cellCanBeDeterminedForRow fillColumns (phil collims?) should match snapshot after one pass 1`] = `
"-------------------------------------------------------
|  9  |  1  |     ❚  4  |     |     ❚     |  3  |  7  |
-------------------------------------------------------
|  2  |     |  4  ❚     |     |  9  ❚  6  |     |     |
-------------------------------------------------------
|     |  8  |  7  ❚     |  3  |  6  ❚  1  |     |  9  |
=======================================================
|     |  9  |  5  ❚     |     |     ❚     |     |     |
-------------------------------------------------------
|     |  4  |  1  ❚  9  |  8  |  5  ❚  3  |  6  |     |
-------------------------------------------------------
|     |     |     ❚     |     |     ❚  4  |  9  |     |
=======================================================
|     |     |  3  ❚  1  |  9  |     ❚  8  |  2  |     |
-------------------------------------------------------
|     |     |  9  ❚     |     |     ❚     |     |  3  |
-------------------------------------------------------
|  4  |  7  |     ❚     |     |  3  ❚  9  |  1  |  6  |
-------------------------------------------------------"
`;

exports[`Cell-filling functions - rows and columns fillRows should match snapshot after one pass 1`] = `
"-------------------------------------------------------
|  9  |  1  |     ❚  4  |     |     ❚     |  3  |  7  |
-------------------------------------------------------
|  2  |     |     ❚     |     |     ❚  6  |     |     |
-------------------------------------------------------
|     |  8  |  7  ❚     |  3  |  6  ❚  1  |     |  9  |
=======================================================
|     |  9  |  5  ❚     |     |     ❚     |     |     |
-------------------------------------------------------
|  7  |  4  |  1  ❚  9  |  8  |  5  ❚  3  |  6  |  2  |
-------------------------------------------------------
|     |     |     ❚     |     |     ❚  4  |  9  |     |
=======================================================
|     |     |  3  ❚  1  |  9  |  7  ❚  8  |  2  |     |
-------------------------------------------------------
|     |     |  9  ❚     |     |     ❚     |     |  3  |
-------------------------------------------------------
|  4  |  7  |     ❚     |     |  3  ❚  9  |  1  |  6  |
-------------------------------------------------------"
`;
